# homework_bank_10_1

./: .flake8  README.md  log.txt  main.py  mylog.txt  pyproject.toml  pytest.ini
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_decorator.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
