[project]
name = "bank-project-homework_9_1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "bank_project_homework_9_1"}]


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.17.1"
pylint = "^3.3.8"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
line_length = 119
known_first_party = ["bank_project_homework_9_1"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "^venv/",
    "^\\.venv/",
    "^build/",
    "^dist/"
]
show_error_codes = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
